# pneumonia_x_ray_images_classifier

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
api/: app.py  requirements.txt
notebooks/: 01-eda.ipynb  02-training.ipynb
pneumonia_x_ray_images_classifier/: __init__.py  dataset.py  features.py  plots.py
pneumonia_x_ray_images_classifier/data/: make_dataset.py  split_dataset.py
pneumonia_x_ray_images_classifier/evaluation/: evaluation_test.py
pneumonia_x_ray_images_classifier/modeling/: predict.py  train.py
pneumonia_x_ray_images_classifier/models/: model.py
