[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pneumonia_x_ray_images_classifier"
version = "0.0.1"
description = "A deep learning\u2013based binary image classifier for detecting pneumonia from chest X-ray images"
authors = [
  { name = "Talha Akhoon" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["pneumonia_x_ray_images_classifier"]
include = ["pyproject.toml", "pneumonia_x_ray_images_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pneumonia_x_ray_images_classifier"]
force-sort-within-sections = true

